--- a/.gitmodules
+++ b/.gitmodules
@@ -1,11 +1,11 @@
 [submodule "TER"]
 	path = TER
 	url = https://github.com/michael-marynowicz/TER.git
-[submodule "utils/sdk"]
-	path = utils/sdk
+[submodule "plugins/sdk"]
+	path = plugins/sdk
 	url = https://github.com/webaudiomodules/sdk.git
-[submodule "utils/sdk-parammgr"]
-	path = utils/sdk-parammgr
+[submodule "plugins/sdk-parammgr"]
+	path = plugins/sdk-parammgr
 	url = https://github.com/webaudiomodules/sdk-parammgr.git
 [submodule "plugins/api"]
 	path = plugins/api
